# HaClient

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/PULL_REQUEST_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  docs.yml  python-ci.yml  python-gitleaks.yml  python-lint.yml  python-release.yml  python-tests.yml  python-typecheck.yml
docs/: README.md  index.md  media_player.md
docs/reference/: api.md  client.md  domains_binary_sensor.md  domains_climate.md  domains_cover.md  domains_light.md  domains_media_player.md  domains_sensor.md  domains_switch.md  entity.md  exceptions.md  registry.md  rest.md  sync.md  websocket.md
docs/reference/domains/: scene.md  timer.md
examples/: events.py  favorites.py
ha_client/: __init__.py  client.py  entity.py  rest.py  sync.py  websocket.py
ha_client/domains/: __init__.py  binary_sensor.py  light.py  media_player.py  switch.py
scripts/: generate-docs.sh
src/haclient/: __init__.py  api.py  client.py  config.py  entity.py  exceptions.py  registry.py  rest.py  sync.py  websocket.py
src/haclient/core/: connection.py  events.py  plugins.py
src/haclient/domains/: __init__.py  binary_sensor.py  climate.py  cover.py  light.py  media_player.py  scene.py  sensor.py  switch.py  timer.py
src/haclient/infra/: ws_aiohttp.py
tests/: conftest.py  fake_ha.py  test_client.py  test_domains.py  test_entity_events.py  test_events.py  test_favorites.py  test_granular_events.py  test_plugins.py  test_registry.py  test_rest.py  test_services.py  test_state_store.py  test_sync.py  test_timer_lifecycle.py  test_websocket.py
